# stkopt

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  prompts.txt
crates/stkopt-chain/: CHANGELOG.md  Cargo.toml
crates/stkopt-chain/chain_specs/: kusama.json  paseo.json  polkadot.json  update_specs.sh  westend.json
crates/stkopt-chain/examples/: check_pallets.rs  inspect_extensions.rs  test_connection.rs  verify_staking_location.rs
crates/stkopt-chain/src/: batch_storage.rs  client.rs  config.rs  display.rs  enrichment.rs  error.rs  lib.rs  lightclient.rs  ss58.rs  transactions.rs
crates/stkopt-chain/src/queries/: account.rs  decode_helpers.rs  era.rs  identity.rs  mod.rs  pools.rs  validators.rs
crates/stkopt-chain/tests/: compare_connection_modes.rs
crates/stkopt-core/: CHANGELOG.md  Cargo.toml
crates/stkopt-core/src/: apy.rs  config.rs  db.rs  display.rs  lib.rs  optimizer.rs  types.rs
crates/stkopt-gpui/: CHANGELOG.md  Cargo.toml  gpui.md
crates/stkopt-gpui/src/: account.rs  actions.rs  app.rs  chain.rs  db.rs  db_service.rs  errors.rs  gpui_tokio.rs  history.rs  lib.rs  log.rs  main.rs  optimization.rs  persistence.rs  pools.rs  qr_reader.rs  shortcuts.rs  tcc.rs  theme.rs  transactions.rs  utils.rs  validators.rs
crates/stkopt-gpui/src/tests/: mod.rs
crates/stkopt-gpui/src/tests/e2e/: connectivity_tests.rs  harness.rs  mod.rs
crates/stkopt-gpui/src/tests/e2e/pages/: mod.rs
crates/stkopt-gpui/src/views/: account.rs  dashboard.rs  help.rs  history.rs  logs.rs  mod.rs  optimization.rs  pool_modal.rs  pools.rs  qr_modal.rs  settings.rs  staking_modal.rs  validators.rs
crates/stkopt-tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/stkopt-tui/src/: action.rs  app.rs  chain_task.rs  config.rs  db.rs  event.rs  log_buffer.rs  main.rs  qr_reader.rs  tcc.rs  theme.rs  tui.rs  ui.rs
scripts/: Info.plist  build-dmg.sh  entitlements.plist
