[workspace]
resolver = "2"
members = [
    "crates/stkopt-chain",
    "crates/stkopt-core",
    "crates/stkopt-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "ISC"

[workspace.dependencies]
# Internal crates
stkopt-chain = { path = "crates/stkopt-chain" }
stkopt-core = { path = "crates/stkopt-core" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Chain interaction
subxt = { version = "0.44", features = ["native", "unstable-light-client"] }
subxt-lightclient = { version = "0.44", features = ["native"] }
subxt-signer = "0.44"
sp-crypto-hashing = "0.1"
parity-scale-codec = "3.7"
# Force ed25519-zebra alloc feature for smoldot compatibility
ed25519-zebra = { version = "4", features = ["alloc"] }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-image = "4"

# QR codes
qrcode = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Utilities
itermut = "0.16.3"
async-trait = "0.1"
base64 = "0.22"
directories = "5.0"
hex = "0.4"
terminal-light = "1.0"

[profile.release]
lto = true
codegen-units = 1
