[workspace]
resolver = "3"
members = [
    "crates/stkopt-chain",
    "crates/stkopt-core",
    "crates/stkopt-gpui",
    "crates/stkopt-tui",
]

[workspace.package]
version = "0.1.7"
edition = "2024"
rust-version = "1.96"
license = "ISC"
description = 'A UI to easily optimise your staking on Polkadot'
authors = ["Pierre F. Aubert pierre@spinorama.org"]
documentation = "https://github.com/pierreaubert/stkopt"
repository = "https://github.com/pierreaubert/stkopt"
keywords = ["polkadot", "staking", "optimisation"]
categories = ["cryptography::cryptocurrencies", "finance"]
readme = "README.md"


[workspace.dependencies]
stkopt-chain = { path = "crates/stkopt-chain" }
stkopt-core = { path = "crates/stkopt-core" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Chain interaction
subxt = { version = "0.50.1", features = ["native", "light-client"] }
subxt-lightclient = { version = "0.50.1", features = ["native"] }
subxt-signer = "0.50.1"
sp-crypto-hashing = "0.1"
parity-scale-codec = "3.7"
# Force ed25519-zebra alloc feature for smoldot compatibility
ed25519-zebra = { version = "4", features = ["alloc"] }

# TUI
ratatui = { version = "0.30.1", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = "11.0.4"

# QR codes
qrcode = "0.14"
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
approx = "0.5"
async-trait = "0.1"
base64 = "0.22"
bs58 = "0.5"
directories = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
itermut = "0.16.3"
lru = "0.16.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
rand = "0.8"
terminal-light = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

proptest = "1.4"
tokio-test = "0.4"
pretty_assertions = "1.4"


[profile.release]
lto = true
codegen-units = 1
