[package]
name = "stkopt-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

[features]
default = []
persistence = ["dep:rusqlite", "dep:directories", "dep:chrono", "dep:serde_json"]

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
