[package]
name = "stkopt-gpui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stkopt-desktop"
path = "src/main.rs"

[dependencies]
# Internal crates
stkopt-chain.workspace = true
stkopt-core = { workspace = true, features = ["persistence"] }
subxt.workspace = true

# GPUI framework (from zed git)
gpui = "0.2"

# UI components from local sotf
gpui-ui-kit = { version = "0.5" }
gpui-px = { version="0.5", features = ["gpui"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
rand.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
color-eyre.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Utilities
directories.workspace = true
hex.workspace = true
rusqlite.workspace = true
nokhwa.workspace = true
rqrr.workspace = true
qrcode.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
pretty_assertions.workspace = true
