[package]
name = "stkopt-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stkopt"
path = "src/main.rs"

[dependencies]
stkopt-chain.workspace = true
stkopt-core = { workspace = true, features = ["persistence"] }
subxt.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
ratatui.workspace = true
crossterm.workspace = true
ratatui-image.workspace = true
qrcode.workspace = true
clap.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
base64.workspace = true
hex.workspace = true
terminal-light.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Camera access for QR code scanning
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }

# Image processing for QR decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# QR code decoding from camera frames
rqrr = "0.9"
